fixed .items alignment-issus on large screens

--- a/client/frontend/src/less/frontend/components.less
+++ b/client/frontend/src/less/frontend/components.less
@@ -1080,7 +1080,7 @@ input[type="text"]#locationSelectionInput {
 
 #deliveryAreas {
   text-align: right;
-  margin-top: 38px;
+  margin-top: 22px;
   padding: 0 5px 0 0;
   cursor: pointer;
   display: none;
@@ -4057,7 +4057,7 @@ div#payment {
     margin: 30px 0 0 20px;
     p {
       text-align: left;
-      width: 300px;
+      width: 400px;
     }
   }
 
